Use the list filter

--- a/ovidentia/skins/ovidentia/templates/statsessions.html
+++ b/ovidentia/skins/ovidentia/templates/statsessions.html
@@ -2,9 +2,10 @@
 <table border="0" width="95%" cellpadding="2" cellspacing="0" align="center">
 	<tr> 
 		<td class="BabLoginCadreBackground"> 
-			<table border="0" width="100%" cellpadding="5" cellspacing="2">
+			<table border="0" width="100%" cellpadding="10" cellspacing="0">
 				<tr class="BabSiteAdminTitleFontBackground"> 
 					<td>{ t_user }</td>
+					<td>{ t_clicks }</td>
 					<td>{ t_time }</td>
 					<td></td>
 				</tr>
@@ -13,6 +14,8 @@
                 <!--#if altbg --><tr class="BabSiteAdminFontBackground"><!--#else altbg --><tr class="BabForumBackground1"><!--#endif altbg -->
                     <td>
                         { name }</td>
+                    <td>
+                        { count }</td>
                     <td>
                         { time }</td>
                     <td>
