Update right description for the notification on account creation. Update mail content for the notification on account creation.

--- a/ovidentia/skins/ovidentia/templates/mailinfo.html
+++ b/ovidentia/skins/ovidentia/templates/mailinfo.html
@@ -99,7 +99,7 @@ Ovidentia is a registered trademark of Cantico - http://www.cantico.fr
 <font color="#000000" size="2" face="Arial, Helvetica, sans-serif"><br />
 
 <strong>{ message }</strong><br />
-<a href="mailto:{ email }" target="_blank">{ username }</a> <br />
+<a href="mailto:{ email }" target="_blank">{ username } ({ email })</a> <br />
 <br />
 { warning }<br /><br /></font>
 <!--#end adminregistration -->
