--- a/ovidentia/skins/ovidentia/templates/notes.html
+++ b/ovidentia/skins/ovidentia/templates/notes.html
@@ -44,7 +44,7 @@
 <table border="0" width="100%" cellpadding="3" cellspacing="0" align="center">
 <tr class="BabSiteAdminTitleFontBackground"> 
 <td width="90%">{ note_date } </td>
-<td nowrap align="right" width="10%"><a class="BabFaqLink" href="{ editurl }">{ editname }</a>&nbsp;|&nbsp;<a class="BabFaqLink" href="{ delurl }">{ delname }</a> </td>
+<td nowrap align="right" width="10%"><a class="BabFaqLink" href="{ editurl }">{ editname }</a>&nbsp;|&nbsp;<a class="BabFaqLink" href="{ delurl }" onclick="return bab_postLinkConfirm(this);">{ delname }</a> </td>
 </tr>
 <tr> 
 <td class="BabTopicsBackground" colspan="2" valign="top"> { note_content } </td>
