Fix FAQ access rights

--- a/ovidentia/skins/ovidentia/templates/faq.html
+++ b/ovidentia/skins/ovidentia/templates/faq.html
@@ -13,7 +13,9 @@
 						<a class="BabFaqLink" href="{ urlcategory }">{ namecategory }</a>
 					</td>
 					<td width="1" class="BabSiteAdminTitleFontBackground">
+					   <!--#if manage -->
 						<a title="{ txtmanage }" href="{ urlmanage }"><img src="{ babSkinPath }images/22x22/system.png" alt="{ txtmanage }" /></a>
+						<!--#endif manage -->
 					</td>
 				</tr>
 				<!--#if description -->
