Fix style in users list

--- a/ovidentia/skins/ovidentia/templates/users.html
+++ b/ovidentia/skins/ovidentia/templates/users.html
@@ -82,7 +82,7 @@ function bab_userListShowHideFilter()
         <tr>
             <td colspan="5" nowrap="nowrap" class="BabLetterlists"><!--#if allselected "== 1" -->{ allname }<img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0" /><!--#else allselected --><a class="BabAlphabetLink" href="{ allurl }">{ allname }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0" /><!--#endif allselected --><!--#in getnextselect --><!--#if selected "== 1" -->{ selectname }<img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0" /><!--#else selected --><a class="BabAlphabetLink" href="{ selecturl }">{ selectname }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0" /><!--#endif selected --><!--#endin getnextselect --></td>
             <!--#if displayNickname -->
-            <td>&nbsp;</td>
+            <td class="BabLetterlists">&nbsp;</td>
             <!--#endif displayNickname -->
         </tr>
 
