--- a/ovidentia/skins/ovidentia/templates/login.html
+++ b/ovidentia/skins/ovidentia/templates/login.html
@@ -42,8 +42,13 @@
 		<!--#endif babCookieIdent -->
     	<tr valign="middle"> 
       		<td colspan="2" align="center"> 
-        	<input type="submit" name="submit" value="{ login }" />
-      	</td>
+	        	<input type="submit" name="submit" value="{ login }" />
+	      	</td>
+    	</tr>
+    	<tr valign="middle">
+    	   <td colspan="2" align="center">
+    	       <a href="{ emailPwdUrl }">{ emailPwdTxt }</a>
+    	   </td>
     	</tr>
   		</table>
       </td>
