Fix issue when displaid in a dialog.

--- a/ovidentia/skins/ovidentia/templates/directory.html
+++ b/ovidentia/skins/ovidentia/templates/directory.html
@@ -726,7 +726,7 @@ bab_initFunctions.push(function() {
         <!--#in getnextfield -->
         <!--#if bfieldv -->
         <tr>
-        <td align="right" width="30%"><b>{ fieldn }:</b></td>
+        <td align="right" width="30%"><span style="font-weight: bold; white-space: nowrap">{ fieldn }:</span></td>
         <td align="left">{ fieldv }</td>
         </tr>
         <!--#endif bfieldv -->
