Fix javascript bug

--- a/ovidentia/skins/ovidentia/templates/admdir.html
+++ b/ovidentia/skins/ovidentia/templates/admdir.html
@@ -1153,7 +1153,7 @@ onclick="selectAll(document.ordform.elements[4]); document.ordform.submit()">
 
     <tr valign="middle">
         <td align="center" colspan="4">
-            <input type="submit" name="Submit" value="{ update }" onclick="selectAll(document.dispdbf.elements[3]);selectAll(document.dispdbf.elements[5]); document.dispdbf.submit()" />
+            <input type="submit" name="Submit" value="{ update }" onclick="selectAll(document.getElementById('listpage0'));selectAll(document.getElementById('listpage1')); document.dispdbf.submit()" />
         <br>
         <br>
         </td>
