Add docx2txt parameter to swish-e in sitesearch template

--- a/ovidentia/skins/ovidentia/templates/sitesearch.swish.html
+++ b/ovidentia/skins/ovidentia/templates/sitesearch.swish.html
@@ -10,6 +10,9 @@
 				<p>{ t_catdoc } :<br />
 				<input type="text" name="catdoc" maxlength="255" value="{ arr[catdoc] }" size="60" /></p>
 
+                <p>{ t_docx2txt } :<br />
+                <input type="text" name="docx2txt" maxlength="255" value="{ arr[docx2txt] }" size="60" /></p>
+
 				<p>{ t_unzip } :<br />
 				<input type="text" name="unzip" maxlength="255" value="{ arr[unzip] }" size="60" /></p>
 			
